Recuperados los datos de modificarViaje.
Pasado registroViaje a JSF. Quedan cosas por implementar

--- a/sdi2-38/WebContent/registroViaje.xhtml
+++ b/sdi2-38/WebContent/registroViaje.xhtml
@@ -9,145 +9,282 @@
     </ui:define>
 
 	<ui:define name="cuerpo">
-		<form action="guardarViaje" method="post">
+		<form id="guardarViaje">
 
 		<center>
 			<h1>#{msgs.titulo_registreViaje}</h1>
 		</center>
 		<hr>
 		<br>
-		<table align="center">
-			<tr>
-				<td><strong>#{msgs.campo_datosSalida}</strong></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_direccion}</td>
-				<td><input type="text" name="departureAddress" align="left"
-					size="50"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_ciudad}</td>
-				<td><input type="text" name="departureCity" align="left"
-					size="15"></td>
-			</tr>
-			<tr>
-				<td align="right">#{campo_estado}</td>
-				<td><input type="text" name="departureState" align="left"
-					size="15"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_pais}</td>
-				<td><input type="text" name="departureCountry" align="left"
-					size="15"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_codigoPostal}</td>
-				<td><input type="text" name="departureCP" align="left"
-					size="15"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_latitud}</td>
-				<td><input type="text" name="departureLatitude" align="left"
-					size="15"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_longitud}</td>
-				<td><input type="text" name="departureLongitud" align="left"
-					size="15"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_fechaConFormato}</td>
-				<td><input type="text" name="departureDate" align="left"
-					size="10"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_horaConFormato}</td>
-				<td><input type="text" name="departureHour" align="left"
-					size="5"></td>
-			</tr>
-			<tr>
-				<td><strong>#{msgs.campo_datosLlegada}</strong></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_direccion}</td>
-				<td><input type="text" name="arrivalAddress" align="left"
-					size="50"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_ciudad}</td>
-				<td><input type="text" name="arrivalCity" align="left"
-					size="15"></td>
-			</tr>
-			<tr>
-				<td align="right">#{campo_estado}</td>
-				<td><input type="text" name="arrivalState" align="left"
-					size="15"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_pais}</td>
-				<td><input type="text" name="arrivalCountry" align="left"
-					size="15"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_codigoPostal}</td>
-				<td><input type="text" name="arrivalCP" align="left" size="15"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_latitud}</td>
-				<td><input type="text" name="arrivalLatitude" align="left"
-					size="15"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_longitud}</td>
-				<td><input type="text" name="arrivalLongitud" align="left"
-					size="15"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_fechaConFormato}</td>
-				<td><input type="text" name="arrivalDate" align="left"
-					size="10"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_horaConFormato}</td>
-				<td>
-					<input type="text" name="arrivalHour" align="left" size="5">
-				</td>
-			</tr>
-			<tr>
-				<td><strong>#{msgs.campos_datosGenerales}</strong></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_fechaCierreConFormato}</td>
-				<td><input type="text" name="closingDate" align="left"
-					size="10"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_horaCierreConFormato}</td>
-				<td>
-					<input type="text" name="closingHour" align="left" size="5">
-				</td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_pasajerosMaximos}</td>
-				<td><input type="text" name="maxPas" align="left" size="2"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_precioEstimado}</td>
-				<td><input type="text" name="estimatedCost" align="left"
-					size="7"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_comentarios}</td>
-				<td>
-					<input type="text" name="comments" align="left" size="30">
-				</td>
-			</tr>
-			<tr>
-				<td><input type="submit" value="Enviar" /></td>
-			</tr>
-		</table>
-		<a href="irAInicio">#{msgs.enlace_cancelar}</a> <br>
-		<!-- <ui:include src="/snippets/muestraMensaje.xhtml" /> -->
+		<strong>#{msgs.campo_datosSalida}</strong>
+		
+			<h:panelGrid columns="2" styleClass="formTable">
+			#{msgs.campo_direccion}
+			<h:panelGroup>
+				<h:inputText value="#{tripsController.trip.departure.address}" required="true"
+					requiredMessage="#{msgs.mensaje_campoObligatorio}" 
+					id="departureAddress"
+					size="15">
+				</h:inputText>
+				<h:message for="departureAddress" style="color:red;margin:8px;"/>
+			</h:panelGroup>
+			
+			#{msgs.campo_ciudad}
+			<h:panelGroup>
+				<h:inputText value="#{tripsController.trip.departure.city}" required="true"
+					requiredMessage="#{msgs.mensaje_campoObligatorio}" 
+					id="departureCity"
+					size="15">
+				</h:inputText>
+				<h:message for="departureCity" style="color:red;margin:8px;"/>
+			</h:panelGroup>
+			
+			#{campo_estado}
+			<h:panelGroup>
+				<h:inputText value="#{tripsController.trip.departure.state}" required="true"
+					requiredMessage="#{msgs.mensaje_campoObligatorio}" 
+					id="departureState"
+					size="15">
+				</h:inputText>
+				<h:message for="departureState" style="color:red;margin:8px;"/>
+			</h:panelGroup>
+			
+			#{msgs.campo_pais}
+			<h:panelGroup>
+				<h:inputText value="#{tripsController.trip.departure.country}" required="true"
+					requiredMessage="#{msgs.mensaje_campoObligatorio}" 
+					id="departureCountry"
+					size="15">
+				</h:inputText>
+				<h:message for="departureCountry" style="color:red;margin:8px;"/>
+			</h:panelGroup>
+			
+			#{msgs.campo_codigoPostal}
+			<h:panelGroup>
+				<h:inputText value="#{tripsController.trip.departure.zipCode}" required="true"
+					requiredMessage="#{msgs.mensaje_campoObligatorio}"
+					converterMessage="#{msgs.mensaje_valorInvalido}" 
+					id="departureCP"
+					size="15">
+					<f:convertNumber maxFractionDigits="0" />
+				</h:inputText>
+				<h:message for="departureCP" style="color:red;margin:8px;"/>
+			</h:panelGroup>
+			
+			#{msgs.campo_latitud}
+			<h:panelGroup>
+				<h:inputText value="#{tripsController.trip.departure.waypoint.lat}"
+					converterMessage="#{msgs.mensaje_valorInvalido}" 
+					id="departureLatitude"
+					size="15">
+					<f:convertNumber />
+				</h:inputText>
+				<h:message for="departureLatitude" style="color:red;margin:8px;"/>
+			</h:panelGroup>
+			
+			#{msgs.campo_longitud}
+			<h:panelGroup>
+				<h:inputText value="#{tripsController.trip.departure.waypoint.lon}"
+					converterMessage="#{msgs.mensaje_valorInvalido}" 
+					id="departureLongitud"
+					size="15">
+					<f:convertNumber />
+				</h:inputText>
+				<h:message for="departureLongitud" style="color:red;margin:8px;"/>
+			</h:panelGroup>
+			
+			#{msgs.campo_fechaConFormato}
+			<h:panelGroup>
+			<!-- TODO COMPLETAR -->
+				<h:inputText value="#{tripsController.VARIABLE_PARA_GUARDAR_LA_FECHA}" required="true"
+					requiredMessage="#{msgs.mensaje_campoObligatorio}"
+					validatorMessage="#{msgs.mensaje_valorInvalido}"
+					id="departureDate">
+					<f:validateRegex pattern="[0-9][0-9]\/[0-9][0-9]\/[0-9][0-9][0-9][0-9]"/>
+				</h:inputText>
+				<h:message for="departureDate" style="color:red;margin:8px;"/>
+			</h:panelGroup>
+			
+			#{msgs.campo_horaConFormato}
+			<h:panelGroup>
+			<!-- TODO COMPLETAR -->
+				<h:inputText value="#{tripsController.trip.VARIABLE_PARA_GUARDAR_LA_HORA}" required="true"
+					requiredMessage="#{msgs.mensaje_campoObligatorio}"
+					validatorMessage="#{msgs.mensaje_valorInvalido}"
+					id="departureHour">
+					<f:validateRegex pattern="[0-9][0-9]\:[0-9][0-9]"/>
+				</h:inputText>
+				<h:message for="departureHour" style="color:red;margin:8px;"/>
+			</h:panelGroup>
+			</h:panelGrid>
+			
+		<strong>#{msgs.campo_datosLlegada}</strong>
+			
+			<h:panelGrid columns="2" styleClass="formTable">
+			#{msgs.campo_direccion}
+			<h:panelGroup>
+				<h:inputText value="#{tripsController.trip.destination.address}" required="true"
+					requiredMessage="#{msgs.mensaje_campoObligatorio}" 
+					id="arrivalAddress"
+					size="15">
+				</h:inputText>
+				<h:message for="arrivalAddress" style="color:red;margin:8px;"/>
+			</h:panelGroup>
+			
+			#{msgs.campo_ciudad}
+			<h:panelGroup>
+				<h:inputText value="#{tripsController.trip.destination.city}" required="true"
+					requiredMessage="#{msgs.mensaje_campoObligatorio}" 
+					id="arrivalCity"
+					size="15">
+				</h:inputText>
+				<h:message for="arrivalCity" style="color:red;margin:8px;"/>
+			</h:panelGroup>
+			
+			#{campo_estado}
+			<h:panelGroup>
+				<h:inputText value="#{tripsController.trip.destination.state}" required="true"
+					requiredMessage="#{msgs.mensaje_campoObligatorio}" 
+					id="arrivalState"
+					size="15">
+				</h:inputText>
+				<h:message for="arrivalState" style="color:red;margin:8px;"/>
+			</h:panelGroup>
+			
+			#{msgs.campo_pais}
+			<h:panelGroup>
+				<h:inputText value="#{tripsController.trip.destination.country}" required="true"
+					requiredMessage="#{msgs.mensaje_campoObligatorio}" 
+					id="arrivalCountry"
+					size="15">
+				</h:inputText>
+				<h:message for="arrivalCountry" style="color:red;margin:8px;"/>
+			</h:panelGroup>
+			
+			#{msgs.campo_codigoPostal}
+			<h:panelGroup>
+				<h:inputText value="#{tripsController.trip.destination.zipCode}" required="true"
+					requiredMessage="#{msgs.mensaje_campoObligatorio}"
+					converterMessage="#{msgs.mensaje_valorInvalido}" 
+					id="arrivalCP"
+					size="15">
+					<f:convertNumber maxFractionDigits="0" />
+				</h:inputText>
+				<h:message for="arrivalCP" style="color:red;margin:8px;"/>
+			</h:panelGroup>
+			
+			#{msgs.campo_latitud}
+			<h:panelGroup>
+				<h:inputText value="#{tripsController.trip.destination.waypoint.lat}"
+					converterMessage="#{msgs.mensaje_valorInvalido}" 
+					id="arrivalLatitude"
+					size="15">
+					<f:convertNumber />
+				</h:inputText>
+				<h:message for="arrivalLatitude" style="color:red;margin:8px;"/>
+			</h:panelGroup>
+			
+			#{msgs.campo_longitud}
+			<h:panelGroup>
+				<h:inputText value="#{tripsController.trip.destination.waypoint.lon}"
+					converterMessage="#{msgs.mensaje_valorInvalido}" 
+					id="arrivalLongitud"
+					size="15">
+					<f:convertNumber />
+				</h:inputText>
+				<h:message for="arrivalLongitud" style="color:red;margin:8px;"/>
+			</h:panelGroup>
+			
+			#{msgs.campo_fechaConFormato}
+			<h:panelGroup>
+			<!-- TODO COMPLETAR -->
+				<h:inputText value="#{tripsController.VARIABLE_PARA_GUARDAR_LA_FECHA}" required="true"
+					requiredMessage="#{msgs.mensaje_campoObligatorio}"
+					validatorMessage="#{msgs.mensaje_valorInvalido}"
+					id="arrivalDate">
+					<f:validateRegex pattern="[0-9][0-9]\/[0-9][0-9]\/[0-9][0-9][0-9][0-9]"/>
+				</h:inputText>
+				<h:message for="arrivalDate" style="color:red;margin:8px;"/>
+			</h:panelGroup>
+			
+			#{msgs.campo_horaConFormato}
+			<h:panelGroup>
+			<!-- TODO COMPLETAR -->
+				<h:inputText value="#{tripsController.trip.VARIABLE_PARA_GUARDAR_LA_HORA}" required="true"
+					requiredMessage="#{msgs.mensaje_campoObligatorio}"
+					validatorMessage="#{msgs.mensaje_valorInvalido}"
+					id="arrivalHour">
+					<f:validateRegex pattern="[0-9][0-9]\:[0-9][0-9]"/>
+				</h:inputText>
+				<h:message for="arrivalHour" style="color:red;margin:8px;"/>
+			</h:panelGroup>
+			</h:panelGrid>
+			
+		<strong>#{msgs.campos_datosGenerales}</strong>
+		
+			<h:panelGrid columns="2" styleClass="formTable">
+			#{msgs.campo_fechaCierreConFormato}
+			<h:panelGroup>
+			<!-- TODO COMPLETAR -->
+				<h:inputText value="#{tripsController.VARIABLE_PARA_GUARDAR_LA_FECHA}" required="true"
+					requiredMessage="#{msgs.mensaje_campoObligatorio}"
+					validatorMessage="#{msgs.mensaje_valorInvalido}"
+					id="closingDate">
+					<f:validateRegex pattern="[0-9][0-9]\/[0-9][0-9]\/[0-9][0-9][0-9][0-9]"/>
+				</h:inputText>
+				<h:message for="closingDate" style="color:red;margin:8px;"/>
+			</h:panelGroup>
+			
+			#{msgs.campo_horaCierreConFormato}
+			<h:panelGroup>
+			<!-- TODO COMPLETAR -->
+				<h:inputText value="#{tripsController.trip.VARIABLE_PARA_GUARDAR_LA_HORA}" required="true"
+					requiredMessage="#{msgs.mensaje_campoObligatorio}"
+					validatorMessage="#{msgs.mensaje_valorInvalido}"
+					id="closingHour">
+					<f:validateRegex pattern="[0-9][0-9]\:[0-9][0-9]"/>
+				</h:inputText>
+				<h:message for="closingHour" style="color:red;margin:8px;"/>
+			</h:panelGroup>
+			</h:panelGrid>
+			
+			#{msgs.campo_pasajerosMaximos}
+			<h:panelGroup>
+				<h:inputText value="#{tripsController.trip.maxPax}" required="true"
+					requiredMessage="#{msgs.mensaje_campoObligatorio}"
+					converterMessage="#{msgs.mensaje_valorInvalido}" 
+					id="maxPas"
+					size="15">
+					<f:convertNumber maxFractionDigits="0"/>
+				</h:inputText>
+				<h:message for="maxPas" style="color:red;margin:8px;"/>
+			</h:panelGroup>
+			
+			#{msgs.campo_precioEstimado}
+			<h:panelGroup>
+				<h:inputText value="#{tripsController.trip.estimatedCost}" required="true"
+					requiredMessage="#{msgs.mensaje_campoObligatorio}"
+					converterMessage="#{msgs.mensaje_valorInvalido}" 
+					id="estimatedCost"
+					size="15">
+					<f:convertNumber maxFractionDigits="2"/>
+				</h:inputText>
+				<h:message for="estimatedCost" style="color:red;margin:8px;"/>
+			</h:panelGroup>
+			
+			#{msgs.campo_comentarios}
+			<h:panelGroup>
+			<h:inputTextarea value="#{tripsController.trip.comments}" required="true"
+					requiredMessage="#{msgs.mensaje_campoObligatorio}" 
+					id="comments" cols="80" rows="10"
+					wrap="virtual" />
+				<h:message for="comments" style="color:red;margin:8px;"/>
+			</h:panelGroup>
+		</h:panelGrid>
+			
+		<h:commandButton value="#{msgs.enlace_enviar}"
+					action="#{tripsController.METODO_QUE_CREE_EL_VIAJE}">
+					
 	</form>
 	<hr>
 	</ui:define>
