--- a/sdi2-38/WebContent/snippets/menu.xhtml
+++ b/sdi2-38/WebContent/snippets/menu.xhtml
@@ -26,6 +26,10 @@
 				value="#{msgs.enlace_registrarViaje}"
 				rendered="#{sesion.usuario!=null}" />
 				
+			<p:menuitem id="linkComentarViaje" style="float:left"
+-				value="#{msgs.enlace_comentarViaje}"
+-				rendered="#{sesion.usuario!=null}" />
+				
 			<p:menuitem id="linkCerrarSesion" style="float:left"
 				value="#{msgs.enlace_cerrarSesion}"
 				rendered="#{sesion.usuario!=null}"
