Creado snippet con el form para crear o modificar un viaje. Modificadas las vistas de registro y modificación de viaje

--- a/sdi2-38/WebContent/modificarViaje.xhtml
+++ b/sdi2-38/WebContent/modificarViaje.xhtml
@@ -10,147 +10,24 @@
     </ui:define>
 
 	<ui:define name="cuerpo">
-		<form action="guardarViajeModificado?id=${viaje.id}" method="post">
+		<form id="modificarViaje">
 
 		<center>
 			<h1>#{msgs.titulo_modifiqueViaje}</h1>
 		</center>
 		<hr>
 		<br>
-		<table align="center">
-			<tr>
-				<td><strong>#{msgs.campo_datosSalida}</strong></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_direccion}</td>
-				<td><input type="text" name="departureAddress" align="left"
-					size="50" value="${viaje.departure.address}"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_ciudad}</td>
-				<td><input type="text" name="departureCity" align="left"
-					size="15" value="${viaje.departure.city}"></td>
-			</tr>
-			<tr>
-				<td align="right">#{campo_estado}</td>
-				<td><input type="text" name="departureState" align="left"
-					size="15" value="${viaje.departure.state}"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_pais}</td>
-				<td><input type="text" name="departureCountry" align="left"
-					size="15" value="${viaje.departure.country}"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_codigoPostal}</td>
-				<td><input type="text" name="departureCP" align="left"
-					size="15" value="${viaje.departure.zipCode}"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_latitud}</td>
-				<td><input type="text" name="departureLatitude" align="left"
-					size="15" value="${viaje.departure.waypoint.lat}"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_longitud}</td>
-				<td><input type="text" name="departureLongitud" align="left"
-					size="15" value="${viaje.departure.waypoint.lon}"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_fechaConFormato}</td>
-				<td><input type="text" name="departureDate" align="left"
-					size="10"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_horaConFormato}</td>
-				<td><input type="text" name="departureHour" align="left"
-					size="5"></td>
-			</tr>
-			<tr>
-				<td><strong>#{msgs.campo_datosLlegada}</strong></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_direccion}</td>
-				<td><input type="text" name="arrivalAddress" align="left"
-					size="50" value="${viaje.destination.address}"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_ciudad}</td>
-				<td><input type="text" name="arrivalCity" align="left"
-					size="15" value="${viaje.destination.city}"></td>
-			</tr>
-			<tr>
-				<td align="right">#{campo_estado}</td>
-				<td><input type="text" name="arrivalState" align="left"
-					size="15" value="${viaje.destination.state}"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_pais}</td>
-				<td><input type="text" name="arrivalCountry" align="left"
-					size="15" value="${viaje.destination.country}"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_codigoPostal}</td>
-				<td><input type="text" name="arrivalCP" align="left" size="15"
-					value="${viaje.destination.zipCode}"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_latitud}</td>
-				<td><input type="text" name="arrivalLatitude" align="left"
-					size="15" value="${viaje.destination.waypoint.lat}"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_longitud}</td>
-				<td><input type="text" name="arrivalLongitud" align="left"
-					size="15" value="${viaje.destination.waypoint.lon}"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_fechaConFormato}</td>
-				<td><input type="text" name="arrivalDate" align="left"
-					size="10"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_horaConFormato}</td>
-				<td><input type="text" name="arrivalHour" align="left" size="5"></td>
-			</tr>
-			<tr>
-				<td><strong>#{msgs.campos_datosGenerales}</strong></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_fechaCierreConFormato}</td>
-				<td><input type="text" name="closingDate" align="left"
-					size="10"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_horaCierreConFormato}</td>
-				<td>
-					<input type="text" name="closingHour" align="left" 
-					size="5"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_pasajerosMaximos}</td>
-				<td><input type="text" name="maxPas" align="left" size="2"
-					value="${viaje.maxPax}"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_precioEstimado}</td>
-				<td><input type="text" name="estimatedCost" align="left"
-					size="7" value="${viaje.estimatedCost}"></td>
-			</tr>
-			<tr>
-				<td align="right">#{msgs.campo_comentarios}</td>
-				<td><input type="text" name="comments" align="left" size="30"
-					value="${viaje.comments}"></td>
-			</tr>
-			<tr>
-				<td><input type="submit" value="Enviar" /></td>
-			</tr>
-		</table>
-		<a href="irAInicio">#{msgs.enlace_cancelar}</a>
-		<!-- <ui:include src="/snippets/muestraMensaje.xhtml" /> -->
+		
+		<ui:include src="/snippets/trip-form.xhtml" />
+		
+		<!-- TODO COMPLETAR -->	
+		<h:commandButton value="#{msgs.enlace_enviar}"
+					action="#{tripsController.METODO_QUE_MODIFIQUE_EL_VIAJE}">
 	</form>
-	<hr>
-	<br>
+	</ui:define>
+	
+	<ui:define name="pie">
+		<ui:include src="/snippets/pie-casa.xhtml" />
 	</ui:define>
 
 </ui:composition>
