--- a/sdi2-38/WebContent/registroViaje.xhtml
+++ b/sdi2-38/WebContent/registroViaje.xhtml
@@ -16,272 +16,10 @@
 		</center>
 		<hr>
 		<br>
-		<strong>#{msgs.campo_datosSalida}</strong>
 		
-			<h:panelGrid columns="2" styleClass="formTable">
-			#{msgs.campo_direccion}
-			<h:panelGroup>
-				<h:inputText value="#{tripsController.trip.departure.address}" required="true"
-					requiredMessage="#{msgs.mensaje_campoObligatorio}" 
-					id="departureAddress"
-					size="15">
-				</h:inputText>
-				<h:message for="departureAddress" style="color:red;margin:8px;"/>
-			</h:panelGroup>
-			
-			#{msgs.campo_ciudad}
-			<h:panelGroup>
-				<h:inputText value="#{tripsController.trip.departure.city}" required="true"
-					requiredMessage="#{msgs.mensaje_campoObligatorio}" 
-					id="departureCity"
-					size="15">
-				</h:inputText>
-				<h:message for="departureCity" style="color:red;margin:8px;"/>
-			</h:panelGroup>
-			
-			#{campo_estado}
-			<h:panelGroup>
-				<h:inputText value="#{tripsController.trip.departure.state}" required="true"
-					requiredMessage="#{msgs.mensaje_campoObligatorio}" 
-					id="departureState"
-					size="15">
-				</h:inputText>
-				<h:message for="departureState" style="color:red;margin:8px;"/>
-			</h:panelGroup>
-			
-			#{msgs.campo_pais}
-			<h:panelGroup>
-				<h:inputText value="#{tripsController.trip.departure.country}" required="true"
-					requiredMessage="#{msgs.mensaje_campoObligatorio}" 
-					id="departureCountry"
-					size="15">
-				</h:inputText>
-				<h:message for="departureCountry" style="color:red;margin:8px;"/>
-			</h:panelGroup>
-			
-			#{msgs.campo_codigoPostal}
-			<h:panelGroup>
-				<h:inputText value="#{tripsController.trip.departure.zipCode}" required="true"
-					requiredMessage="#{msgs.mensaje_campoObligatorio}"
-					converterMessage="#{msgs.mensaje_valorInvalido}" 
-					id="departureCP"
-					size="15">
-					<f:convertNumber maxFractionDigits="0" />
-				</h:inputText>
-				<h:message for="departureCP" style="color:red;margin:8px;"/>
-			</h:panelGroup>
-			
-			#{msgs.campo_latitud}
-			<h:panelGroup>
-				<h:inputText value="#{tripsController.trip.departure.waypoint.lat}"
-					converterMessage="#{msgs.mensaje_valorInvalido}" 
-					id="departureLatitude"
-					size="15">
-					<f:convertNumber />
-				</h:inputText>
-				<h:message for="departureLatitude" style="color:red;margin:8px;"/>
-			</h:panelGroup>
-			
-			#{msgs.campo_longitud}
-			<h:panelGroup>
-				<h:inputText value="#{tripsController.trip.departure.waypoint.lon}"
-					converterMessage="#{msgs.mensaje_valorInvalido}" 
-					id="departureLongitud"
-					size="15">
-					<f:convertNumber />
-				</h:inputText>
-				<h:message for="departureLongitud" style="color:red;margin:8px;"/>
-			</h:panelGroup>
-			
-			#{msgs.campo_fechaConFormato}
-			<h:panelGroup>
-			<!-- TODO COMPLETAR -->
-				<h:inputText value="#{tripsController.VARIABLE_PARA_GUARDAR_LA_FECHA}" required="true"
-					requiredMessage="#{msgs.mensaje_campoObligatorio}"
-					validatorMessage="#{msgs.mensaje_valorInvalido}"
-					id="departureDate">
-					<f:validateRegex pattern="[0-9][0-9]\/[0-9][0-9]\/[0-9][0-9][0-9][0-9]"/>
-				</h:inputText>
-				<h:message for="departureDate" style="color:red;margin:8px;"/>
-			</h:panelGroup>
-			
-			#{msgs.campo_horaConFormato}
-			<h:panelGroup>
-			<!-- TODO COMPLETAR -->
-				<h:inputText value="#{tripsController.trip.VARIABLE_PARA_GUARDAR_LA_HORA}" required="true"
-					requiredMessage="#{msgs.mensaje_campoObligatorio}"
-					validatorMessage="#{msgs.mensaje_valorInvalido}"
-					id="departureHour">
-					<f:validateRegex pattern="[0-9][0-9]\:[0-9][0-9]"/>
-				</h:inputText>
-				<h:message for="departureHour" style="color:red;margin:8px;"/>
-			</h:panelGroup>
-			</h:panelGrid>
-			
-		<strong>#{msgs.campo_datosLlegada}</strong>
-			
-			<h:panelGrid columns="2" styleClass="formTable">
-			#{msgs.campo_direccion}
-			<h:panelGroup>
-				<h:inputText value="#{tripsController.trip.destination.address}" required="true"
-					requiredMessage="#{msgs.mensaje_campoObligatorio}" 
-					id="arrivalAddress"
-					size="15">
-				</h:inputText>
-				<h:message for="arrivalAddress" style="color:red;margin:8px;"/>
-			</h:panelGroup>
-			
-			#{msgs.campo_ciudad}
-			<h:panelGroup>
-				<h:inputText value="#{tripsController.trip.destination.city}" required="true"
-					requiredMessage="#{msgs.mensaje_campoObligatorio}" 
-					id="arrivalCity"
-					size="15">
-				</h:inputText>
-				<h:message for="arrivalCity" style="color:red;margin:8px;"/>
-			</h:panelGroup>
-			
-			#{campo_estado}
-			<h:panelGroup>
-				<h:inputText value="#{tripsController.trip.destination.state}" required="true"
-					requiredMessage="#{msgs.mensaje_campoObligatorio}" 
-					id="arrivalState"
-					size="15">
-				</h:inputText>
-				<h:message for="arrivalState" style="color:red;margin:8px;"/>
-			</h:panelGroup>
-			
-			#{msgs.campo_pais}
-			<h:panelGroup>
-				<h:inputText value="#{tripsController.trip.destination.country}" required="true"
-					requiredMessage="#{msgs.mensaje_campoObligatorio}" 
-					id="arrivalCountry"
-					size="15">
-				</h:inputText>
-				<h:message for="arrivalCountry" style="color:red;margin:8px;"/>
-			</h:panelGroup>
-			
-			#{msgs.campo_codigoPostal}
-			<h:panelGroup>
-				<h:inputText value="#{tripsController.trip.destination.zipCode}" required="true"
-					requiredMessage="#{msgs.mensaje_campoObligatorio}"
-					converterMessage="#{msgs.mensaje_valorInvalido}" 
-					id="arrivalCP"
-					size="15">
-					<f:convertNumber maxFractionDigits="0" />
-				</h:inputText>
-				<h:message for="arrivalCP" style="color:red;margin:8px;"/>
-			</h:panelGroup>
-			
-			#{msgs.campo_latitud}
-			<h:panelGroup>
-				<h:inputText value="#{tripsController.trip.destination.waypoint.lat}"
-					converterMessage="#{msgs.mensaje_valorInvalido}" 
-					id="arrivalLatitude"
-					size="15">
-					<f:convertNumber />
-				</h:inputText>
-				<h:message for="arrivalLatitude" style="color:red;margin:8px;"/>
-			</h:panelGroup>
-			
-			#{msgs.campo_longitud}
-			<h:panelGroup>
-				<h:inputText value="#{tripsController.trip.destination.waypoint.lon}"
-					converterMessage="#{msgs.mensaje_valorInvalido}" 
-					id="arrivalLongitud"
-					size="15">
-					<f:convertNumber />
-				</h:inputText>
-				<h:message for="arrivalLongitud" style="color:red;margin:8px;"/>
-			</h:panelGroup>
-			
-			#{msgs.campo_fechaConFormato}
-			<h:panelGroup>
-			<!-- TODO COMPLETAR -->
-				<h:inputText value="#{tripsController.VARIABLE_PARA_GUARDAR_LA_FECHA}" required="true"
-					requiredMessage="#{msgs.mensaje_campoObligatorio}"
-					validatorMessage="#{msgs.mensaje_valorInvalido}"
-					id="arrivalDate">
-					<f:validateRegex pattern="[0-9][0-9]\/[0-9][0-9]\/[0-9][0-9][0-9][0-9]"/>
-				</h:inputText>
-				<h:message for="arrivalDate" style="color:red;margin:8px;"/>
-			</h:panelGroup>
-			
-			#{msgs.campo_horaConFormato}
-			<h:panelGroup>
-			<!-- TODO COMPLETAR -->
-				<h:inputText value="#{tripsController.trip.VARIABLE_PARA_GUARDAR_LA_HORA}" required="true"
-					requiredMessage="#{msgs.mensaje_campoObligatorio}"
-					validatorMessage="#{msgs.mensaje_valorInvalido}"
-					id="arrivalHour">
-					<f:validateRegex pattern="[0-9][0-9]\:[0-9][0-9]"/>
-				</h:inputText>
-				<h:message for="arrivalHour" style="color:red;margin:8px;"/>
-			</h:panelGroup>
-			</h:panelGrid>
-			
-		<strong>#{msgs.campos_datosGenerales}</strong>
+		<ui:include src="/snippets/trip-form.xhtml" />
 		
-			<h:panelGrid columns="2" styleClass="formTable">
-			#{msgs.campo_fechaCierreConFormato}
-			<h:panelGroup>
-			<!-- TODO COMPLETAR -->
-				<h:inputText value="#{tripsController.VARIABLE_PARA_GUARDAR_LA_FECHA}" required="true"
-					requiredMessage="#{msgs.mensaje_campoObligatorio}"
-					validatorMessage="#{msgs.mensaje_valorInvalido}"
-					id="closingDate">
-					<f:validateRegex pattern="[0-9][0-9]\/[0-9][0-9]\/[0-9][0-9][0-9][0-9]"/>
-				</h:inputText>
-				<h:message for="closingDate" style="color:red;margin:8px;"/>
-			</h:panelGroup>
-			
-			#{msgs.campo_horaCierreConFormato}
-			<h:panelGroup>
-			<!-- TODO COMPLETAR -->
-				<h:inputText value="#{tripsController.trip.VARIABLE_PARA_GUARDAR_LA_HORA}" required="true"
-					requiredMessage="#{msgs.mensaje_campoObligatorio}"
-					validatorMessage="#{msgs.mensaje_valorInvalido}"
-					id="closingHour">
-					<f:validateRegex pattern="[0-9][0-9]\:[0-9][0-9]"/>
-				</h:inputText>
-				<h:message for="closingHour" style="color:red;margin:8px;"/>
-			</h:panelGroup>
-			</h:panelGrid>
-			
-			#{msgs.campo_pasajerosMaximos}
-			<h:panelGroup>
-				<h:inputText value="#{tripsController.trip.maxPax}" required="true"
-					requiredMessage="#{msgs.mensaje_campoObligatorio}"
-					converterMessage="#{msgs.mensaje_valorInvalido}" 
-					id="maxPas"
-					size="15">
-					<f:convertNumber maxFractionDigits="0"/>
-				</h:inputText>
-				<h:message for="maxPas" style="color:red;margin:8px;"/>
-			</h:panelGroup>
-			
-			#{msgs.campo_precioEstimado}
-			<h:panelGroup>
-				<h:inputText value="#{tripsController.trip.estimatedCost}" required="true"
-					requiredMessage="#{msgs.mensaje_campoObligatorio}"
-					converterMessage="#{msgs.mensaje_valorInvalido}" 
-					id="estimatedCost"
-					size="15">
-					<f:convertNumber maxFractionDigits="2"/>
-				</h:inputText>
-				<h:message for="estimatedCost" style="color:red;margin:8px;"/>
-			</h:panelGroup>
-			
-			#{msgs.campo_comentarios}
-			<h:panelGroup>
-			<h:inputTextarea value="#{tripsController.trip.comments}" required="true"
-					requiredMessage="#{msgs.mensaje_campoObligatorio}" 
-					id="comments" cols="80" rows="10"
-					wrap="virtual" />
-				<h:message for="comments" style="color:red;margin:8px;"/>
-			</h:panelGroup>
-		</h:panelGrid>
-			
+		<!-- TODO COMPLETAR -->	
 		<h:commandButton value="#{msgs.enlace_enviar}"
 					action="#{tripsController.METODO_QUE_CREE_EL_VIAJE}">
 					
