--- a/sdi2-38/WebContent/snippets/menu.xhtml
+++ b/sdi2-38/WebContent/snippets/menu.xhtml
@@ -27,8 +27,8 @@
 				rendered="#{sesion.usuario!=null}" />
 				
 			<p:menuitem id="linkComentarViaje" style="float:left"
--				value="#{msgs.enlace_comentarViaje}"
--				rendered="#{sesion.usuario!=null}" />
+				value="#{msgs.enlace_comentarViaje}"
+				rendered="#{sesion.usuario!=null}" />
 				
 			<p:menuitem id="linkCerrarSesion" style="float:left"
 				value="#{msgs.enlace_cerrarSesion}"
