Creado snippet para mostrar mensajes de error. Utilizado en vistas pertinentes.

--- a/sdi2-38/WebContent/infoCompleta.xhtml
+++ b/sdi2-38/WebContent/infoCompleta.xhtml
@@ -15,10 +15,13 @@
 			#{seatController.promoter.name} #{seatController.promoter.surname}</p>
 		<h:form>
 			Los participantes confirmados del viaje son:
-			<p:dataList value="#seatController.participantes" var="part"
+			<p:dataList value="#{seatController.participantes}" var="part"
 				type="ordered">
 				#{part.name} #{part.surname}	
 			</p:dataList>
+			
+			<ui:include src="/snippets/error-messages.xhtml" />
+			
 		</h:form>
 	</div>
 	</ui:define>
