--- a/sdi2-38/WebContent/listaViajes.xhtml
+++ b/sdi2-38/WebContent/listaViajes.xhtml
@@ -48,7 +48,8 @@
 						</p:commandLink>
 					</p:column>
 				</p:dataTable>
-				<h:messages />
+				
+				<ui:include src="/snippets/error-messages.xhtml" />
 			</p:panel>
 		</h:form>
 
