--- a/sdi2-38/WebContent/error.xhtml
+++ b/sdi2-38/WebContent/error.xhtml
@@ -14,12 +14,8 @@
 			<p:panel header="#{msgs.tituloOperacionError}">
 				<h:messages />
 			</p:panel>
-			<h:commandLink value="#{msgs.enlace_casa}"
-			action="/principalRegistrado.xhtml" rendered="#{sesion.usuario!=null}">
-		</h:commandLink>
-		<h:commandLink value="#{msgs.enlace_casa}"
-			action="/login.xhtml" rendered="#{sesion.usuario==null}">
-		</h:commandLink>
+		
+		<ui:include src="/snippets/pie-casa.xhtml" />
 		</h:form>
 		
 	</ui:define>
