--- a/sdi2-38/WebContent/viajesInvolucrado.xhtml
+++ b/sdi2-38/WebContent/viajesInvolucrado.xhtml
@@ -103,7 +103,7 @@
 					</p:column>
 				</p:dataTable>
 			</p:panel>
-			<h:messages/>
+			<ui:include src="/snippets/error-messages.xhtml" />
 		</h:form>
 	</ui:define>
 
