Añadidos enlaces a casa en las vistas que faltaban

--- a/sdi2-38/WebContent/registro.xhtml
+++ b/sdi2-38/WebContent/registro.xhtml
@@ -85,5 +85,9 @@
 		</h:form>
 		<hr/>
 	</ui:define>
+	
+	<ui:define name="pie">
+		<ui:include src="/snippets/pie-casa.xhtml" />
+	</ui:define>
 
 </ui:composition>
