--- a/sdi2-38/WebContent/infoCompleta.xhtml
+++ b/sdi2-38/WebContent/infoCompleta.xhtml
@@ -25,5 +25,9 @@
 		</h:form>
 	</div>
 	</ui:define>
+	
+	<ui:define name="pie">
+		<ui:include src="/snippets/pie-casa.xhtml" />
+	</ui:define>
 
 </ui:composition>
